--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {margin:0;}
 
 .navbar a {
   display: inline-block;
-  color: #54585A;
+  color: #bf00ff;
   text-align: center;
   padding: 14px 16px 4px;
   text-decoration: none;
